<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".actAgregarTarea">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/descripcionSubactividad"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="32dp" />

        <EditText
            android:id="@+id/edtTxtDescripcionTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="textMultiLine"
            android:hint="@string/descripcionSubactividad"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/vencimientoSubactividad" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/fecha" />

        <DatePicker
            android:id="@+id/dpFechaVencimiento"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="calendar"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/hora" />

        <TimePicker
            android:id="@+id/tpHoraVencimiento"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:timePickerMode="spinner"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtListaTareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/enActividad"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnAnadirTarea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/agregarSubactividad" />

    </LinearLayout>
</ScrollView>